# football-manager-26-accessible

./: .gitignore  ARCHITECTURE.md  BACKEND_INTEGRATION.md  FootballManager26.spec  README.md  backend_refactor_validation.py  benchmark_backend.py  build_backend_native_match.bat  competition_validation.py  database.py  engine_bridge.py  fix_ui_competitions.py  game_engine.py  main.py  match_engine.py  models.py  playback_validation.py  requested_changes_validation.py  reviewer_validation.py  save_system.py  speech.py  ui.py  ui_access_validation.py
.github/workflows/: auto-tag-release.yml  ci.yml  release.yml
backend/: CMakeLists.txt
backend/include/: fm_engine_api.h  models.hpp  network_contracts.hpp
backend/python_bindings/: bindings.cpp
backend/src/: api.cpp  club_systems.cpp  game_state.cpp  match_engine.cpp  persistence.cpp  season_engine.cpp
core/: events.py  interfaces.py
multiplayer_server/: README_DEPLOY.txt  server.py
services/: account_service.py  audio_service.py  competition_service.py  game_service.py  network_service.py  render_service.py
tools/: bump_version_and_tag.py
